README and backend spoitfy
